--- a/index.html
+++ b/index.html
@@ -32,14 +32,20 @@
             </div>
         </div>
     </section>
-    <section id="project-grid" class="section">
-        <div class="columns is-desktop is-multiline">
+    <section class="section">
+        <div id="project-grid" class="columns is-desktop is-multiline">
             
-            <bulma-project title="Buetify" link="https://buefy.github.io/#/" picture="https://github.com/rafaelpimpa/buefy/raw/dev/static/img/buefy-banner.png"></bulma-project>
+            <bulma-project 
+            title="Buetify" 
+            link="https://buefy.github.io/#/" 
+            picture="https://github.com/rafaelpimpa/buefy/raw/dev/static/img/buefy-banner.png"></bulma-project>
             
-            <bulma-project title="Bulmaswatch" link="https://jenil.github.io/bulmaswatch/" picture="https://jenil.github.io/bulmaswatch/assets/preview-3.2.png"></bulma-project>
+            <bulma-project 
+            title="Bulmaswatch" 
+            link="https://jenil.github.io/bulmaswatch/" 
+            picture="https://jenil.github.io/bulmaswatch/assets/preview-3.2.png"></bulma-project>
 
-            <!--Add you project above, just like the others!-->
+            <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
     </section>
 </body>
