--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     Projects Built with Bulma
                 </h1>
                 <h2 class="subtitle">
-                    <a class="button is-black is-inverted is-outlined">Submit a Project</a>
+                    <a class="button is-black is-inverted is-outlined" href="https://github.com/builtwithbulma/builtwithbulma.github.io#wanna-add-your-project">Submit a Project</a>
                 </h2>
             </div>
         </div>
@@ -44,6 +44,11 @@
             title="Bulmaswatch" 
             link="https://jenil.github.io/bulmaswatch/" 
             picture="https://jenil.github.io/bulmaswatch/assets/preview-3.2.png"></bulma-project>
+
+            <bulma-project 
+            title="Dashboard Template" 
+            link="https://github.com/mazipan/bulma-admin-dashboard-template" 
+            picture="https://raw.githubusercontent.com/mazipan/bulma-admin-dashboard-template/master/screenshoot.jpg"></bulma-project>
 
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
