blue url bar on chrome on mobile added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
     <!-- Set the color for the URL bar on Chrome on Android phones/tablets-->
-    <meta name="theme-color" content="">
+    <meta name="theme-color" content="#3273DC">
 
     <!--stylesheet-->
     <link rel="stylesheet" type="text/css" href="styles.min.css">
