changed text on submit project button, added more projects

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     Projects Built with Bulma
                 </h1>
                 <h2 class="subtitle">
-                    <a class="button is-black is-inverted is-outlined" href="https://github.com/builtwithbulma/builtwithbulma.github.io#wanna-add-your-project">Submit a Project</a>
+                    <a class="button is-black is-inverted is-outlined is-medium" href="https://github.com/builtwithbulma/builtwithbulma.github.io#wanna-add-your-project">Submit Your Project on Github!</a>
                 </h2>
             </div>
         </div>
@@ -49,6 +49,16 @@
             title="Dashboard Template" 
             link="https://github.com/mazipan/bulma-admin-dashboard-template" 
             picture="https://raw.githubusercontent.com/mazipan/bulma-admin-dashboard-template/master/screenshoot.jpg"></bulma-project>
+
+            <bulma-project 
+            title="R@M club" 
+            link="http://ram.umd.edu/" 
+            picture="https://konaraddio.github.io/images/portfolio/ram_revamp.jpeg"></bulma-project>
+
+            <bulma-project 
+            title="c1-airbnb" 
+            link="https://konaraddio.github.io/c1-airbnb" 
+            picture="https://konaraddio.github.io/images/portfolio/c1-airbnb.png"></bulma-project>
 
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
