added a couple more websites

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     A grid of projects built with Bulma
                 </h2>
                 <h2 class="subtitle">
-                    <a class="button is-black is-medium" href="https://github.com/builtwithbulma/builtwithbulma.github.io#wanna-add-your-project" target="_blank">Submit Your Project on Github!</a>
+                    <a class="button is-white is-medium" href="https://github.com/builtwithbulma/builtwithbulma.github.io#wanna-add-your-project" target="_blank">Submit Your Project on Github!</a>
                 </h2>
                 <h2 class="subtitle">
                     <a class="button is-black is-inverted is-outlined is-medium" href="//bulma.io" target="_blank">Bulma.io</a>
@@ -51,7 +51,28 @@
             picture="https://github.com/rafaelpimpa/buefy/raw/dev/static/img/buefy-banner.png">
             Lightweight UI components for Vue.js based on Bulma 
             </bulma-project>
+
+            <bulma-project 
+            title="Vue Admin" 
+            link="https://admin.vuebulma.com/#/" 
+            picture="https://github.com/vue-bulma/vue-admin/raw/master/screenshots/preview.jpg">
+            Vue Admin Panel Framework, Powered by Vue 2.0 and Bulma 0.3
+            </bulma-project>
             
+            <bulma-project 
+            title="Bon Goût" 
+            link="https://bongoutindonesia.com/" 
+            picture="https://bulma.io/images/expo/bongoutindonesia-1344x840.jpg">
+            Bon Goût's website built with Bulma
+            </bulma-project>
+
+            <bulma-project 
+            title="UploadMe" 
+            link="https://uploadme.ai/" 
+            picture="https://bulma.io/images/expo/uploadme-1344x840.jpg">
+            Create your immortal AI doppelganger
+            </bulma-project>
+
             <bulma-project 
             title="Bulmaswatch" 
             link="https://jenil.github.io/bulmaswatch/" 
