Request to add Cronos CCS homepage

--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
             picture="http://ss.lfgame.rs/oAPY/Image%202017-12-06%20at%2010.28.49.png">
             Public server listing for the popular chat app, Discord
             </bulma-project>
+
+            <bulma-project 
+            title="Cronos CCS Homepage" 
+            link="https://cronosccs.com" 
+            picture="https://cronosccs.com/assets/uploads/cronos_screenshot.png">
+            Homepage for Cronos Clinical Consulting Services, Inc. - Jekyll, Bulma, Netlify-CMS
+            </bulma-project>
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
 
