formatting, added submit btn to bottom too

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                     A grid of projects built with Bulma
                 </h2>
                 <h2 class="subtitle">
-                    <a class="button is-white is-medium" href="https://github.com/builtwithbulma/builtwithbulma.github.io#wanna-add-your-project" target="_blank">Submit Your Project on Github!</a>
+                    <a class="button is-white is-medium" href="https://github.com/builtwithbulma/builtwithbulma.github.io#wanna-add-your-project" target="_blank">Submit your project on Github!</a>
                 </h2>
                 <h2 class="subtitle">
-                    <a class="button is-black is-inverted is-outlined is-medium" href="//bulma.io" target="_blank">Bulma.io</a>
+                    <a class="button is-black is-inverted is-outlined is-medium" href="//bulma.io" target="_blank">What's Bulma?</a>
                 </h2>
             </div>
         </div>
     </section>
 
-    <section class="section">
+    <section class="section has-text-centered">
         <div id="project-grid" class="columns is-desktop is-multiline">
             
             <!--ADD YOUR PROJECT BELOW, just like the others!-->
@@ -99,6 +99,11 @@
 
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
+
+        <br>
+
+        <a class="button is-dark is-inverted is-outlined is-medium" href="https://github.com/builtwithbulma/builtwithbulma.github.io#wanna-add-your-project" target="_blank">Submit your project on Github!</a>
+
     </section>
 </body>
 </html>
