--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <div id="project-grid" class="columns is-desktop is-multiline">
             
             <!--ADD YOUR PROJECT BELOW, just like the others!-->
+            <bulma-project 
+            title="MergeSiganture" 
+            link="https://www.mergesignature.com" 
+            picture="https://mergesignature.com/assets/images/mergesignature-preview.png">
+            MergeSignature is a tool that helps create a HTML email signatures with different contact info, from a template. 
+            </bulma-project>
 
             <bulma-project 
             title="Buefy" 
