--- a/index.html
+++ b/index.html
@@ -102,7 +102,13 @@
             title="c1-airbnb" 
             link="https://konaraddio.github.io/c1-airbnb" 
             picture="https://konaraddio.github.io/images/portfolio/c1-airbnb.png">Personal project visualizing data from SF Airbnb</bulma-project>
-
+            
+            <bulma-project 
+            title="DiscordServers" 
+            link="https://discordservers.com" 
+            picture="http://ss.lfgame.rs/oAPY/Image%202017-12-06%20at%2010.28.49.png">
+            Public server listing for the popular chat app, Discord
+            </bulma-project>
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
 
