--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
             picture="https://cronosccs.com/assets/uploads/cronos_screenshot.png">
             Homepage for Cronos Clinical Consulting Services, Inc. - Jekyll, Bulma, Netlify-CMS
             </bulma-project>
+            
+            <bulma-project
+            title="Zipcode Info"
+            link="https://downtothemetal.com/projects/zip/"   
+            picture="https://downtothemetal.com/projects/img/thumbs/zip.jpg">
+            Small Zipcode Info Search App using Bulma, VanillaJS, and Zippopotam.us API
+            </bulma-project>
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
 
