fixed issue with cards

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             link="https://downtothemetal.com/projects/zip/"   
             picture="https://downtothemetal.com/projects/img/thumbs/zip.jpg">
             Small Zipcode Info Search App using Bulma, VanillaJS, and Zippopotam.us API
+            </bulma-project>
 
             <bulma-project 
             title="Jennifer Lucia - Author" 
