fixed link for a project pic

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <bulma-project 
             title="Jennifer Lucia - Author" 
             link="https://jenniferlucia.com" 
-            picture="http://jenniferlucia.com/images/jenniferlucia_com_bulma.png">
+            picture="http://dsjsystems.com/images/jenniferlucia_com_bulma.png">
             Homepage for Jennifer Lucia, a self published romance author.
             </bulma-project>
             
