--- a/index.html
+++ b/index.html
@@ -120,10 +120,24 @@
             </bulma-project>
             
             <bulma-project
+            title="Gustav"
+            link="https://hellogustav.com/"   
+            picture="https://bulma.io/images/expo/gustav-2688x1680.jpg">
+            A faster route to the best talent.
+            </bulma-project>
+
+            <bulma-project
             title="Zipcode Info"
             link="https://downtothemetal.com/projects/zip/"   
             picture="https://downtothemetal.com/projects/img/thumbs/zip.jpg">
             Small Zipcode Info Search App using Bulma, VanillaJS, and Zippopotam.us API
+            </bulma-project>
+
+            <bulma-project
+            title="Lottie Files"
+            link="https://www.lottiefiles.com/"   
+            picture="https://bulma.io/images/expo/lottiefiles-1344x840.jpg">
+            An online community to find, test, and share striking animations
             </bulma-project>
 
             <bulma-project 
