add place card me and photos new tab

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
             <bulma-project
             title="Gustav"
-            link="https://hellogustav.com/"   
+            link="https://hellogustav.com/"
             picture="https://bulma.io/images/expo/gustav-2688x1680.jpg">
             A faster route to the best talent.
             </bulma-project>
@@ -135,12 +135,12 @@
 
             <bulma-project
             title="Lottie Files"
-            link="https://www.lottiefiles.com/"   
+            link="https://www.lottiefiles.com/"
             picture="https://bulma.io/images/expo/lottiefiles-1344x840.jpg">
             An online community to find, test, and share striking animations
             </bulma-project>
 
-            <bulma-project 
+            <bulma-project
             title="Jennifer Lucia - Author"
             link="https://jenniferlucia.com"
             picture="http://dsjsystems.com/images/jenniferlucia_com_bulma.png">
@@ -175,13 +175,27 @@
             An introductory guide to READMEs
             </bulma-project>
 
-            <bulma-project 
-            title="我旁" 
-            link="https://3kmq.com" 
+            <bulma-project
+            title="我旁"
+            link="https://3kmq.com"
             picture="https://3kmq.com/images/3kmq_ss_s.png">
             Location Based Forum.Build with Bulma/Vue/Laravel.
             </bulma-project>
-            
+
+            <bulma-project
+            title="Place Card Me"
+            link="https://placecard.me"
+            picture="https://www.placecard.me/static/images/placecard-logo-new.png">
+            The best way to make your own place cards online.
+            </bulma-project>
+
+            <bulma-project
+            title="Photos New Tab"
+            link="http://www.photosnewtab.com/"
+            picture="http://www.coryzue.com/images/projects/photos-tab-tile.jpg">
+            Extension to see your Google Photos in new tabs.
+            </bulma-project>
+
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
 
