Added Social In Brief

--- a/index.html
+++ b/index.html
@@ -182,6 +182,13 @@
             Location Based Forum.Build with Bulma/Vue/Laravel.
             </bulma-project>
             
+            <bulma-project 
+            title="Social In Brief" 
+            link="https://socialinbrief.com" 
+            picture="https://screenshots.firefoxusercontent.com/images/34f25491-02a5-4e1b-9415-88800413e4e2.png">
+            Social Media Reporting tool. Built with Bulma/Vue/PHP
+            </bulma-project>
+            
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
 
