--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
             Social Media Reporting tool. Built with Bulma/Vue/PHP
             </bulma-project>
             
+            <bulma-project 
+            title="QRMetric" 
+            link="https://www.qrmetric.com" 
+            picture="https://i.imgur.com/udOiHni.png">
+            Dynamic QR Code Generator. Built with Bulma/Vue/Laravel.
+            </bulma-project>
+            
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
 
