added content description meta tag for seo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Built with Bulma</title>
+    <meta name="description" content="Projects (e.g. websites, portfolios, apps) built with Bulma (CSS framework"/>
 
     <!--for scaling across various devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
