Added Hyper Host to the list

--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
             picture="qrmetric.png">
             Dynamic QR Code Generator. Built with Bulma/Vue/Laravel.
             </bulma-project>
+
+            <bulma-project 
+            title="Hyper Host" 
+            link="https://hyper.host" 
+            picture="hyperhost.png">
+            Enhanced Cloud Hosting.
+            </bulma-project>
+
             
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
