--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@
             Enhanced Cloud Hosting.
             </bulma-project>
 
+            <bulma-project 
+            title="StadiumWiz" 
+            link="https://stadiumwiz.com" 
+            picture="stadiumwiz.png">
+            Sports Stadium Guide. Bulma/React.
+            </bulma-project>
+
             
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
         </div>
