Add Path to Product to Project list

--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
             picture="stadiumwiz.png">
             Sports Stadium Guide. Bulma/React.
             </bulma-project>
+            
+            <bulma-project 
+            title="Path to Product" 
+            link="https://www.pathtoproduct.com" 
+            picture="pathtoproduct.png">
+            Discover over 1,000 product jobs at startups and tech companies.
+            </bulma-project>
 
             
             <!--ADD YOUR PROJECT ABOVE, just like the others!-->
